0.1.4
Cleaned the docviewer code.
Added a "Find API In Qt5 Docs" entry box to toolbar.
Fixed minor bug when selecting "Search In Gtk Docs" from 'Navigation' menu when no selection.
Added "Search In Qt5 Docs" to 'Navigation' menu.
Added "Search In Qt5 Docs" to context menu.
Removed QT Search from external tools.
Fixed compile error when using --disable-docviewer
Minor fix to root style.

0.1.3
Automatically chooses the 'Root Source' style when using a root window if the style has not been set.
Added a 'Root' gtksourcestyle for using a root editor.
Added 'Remove All Bookmarks' to bookmark menu.
Tweaked a few external tools to take advantage of the new 'View Output' option.
Entry's now sorted in 'Tools' menu and 'Manage External Tools' drop down.
Fixed a couple of tools.
Added 'Show/Hide Tool Output' to 'View' menu.
Added a 'View Output' option to tool flags.
Changed 'Toggle' in 'View' menu to 'Show/Hide'.
Fixed 'Functions' menu sorting changes to reflect prefs immediately.
Fixed 'Functions' menu not being updated on save.
Added 'Categorised' submenus to 'Functions' menu sorting.
Added Function list sorting to prefs.

0.1.2
Redone help files.
Removed unnecessary options from prefs.
Removed 'Show BM Bar' from prefs ( now automatic ).
Carried over visibility of Bookmark Bar and Tool Bar from previous session.
Moved 'Toggle Bookmark Bar' to 'View' Menu.
Added 'Toggle Tool Bar' to 'View' menu.
Added new 'View' menu.
Fixed greying out of unusable toolbar buttons ( e.g. can't 'cut' when no page visible etc ).
Added expander to toolbar items.
Added configurable toolbar.
Fixed bug when loading session where file has weird characters in the name.

0.1.1
Fixed tool not appearing in popup if both popup options selected.
Fixed not creating new tool if ~/.KKEdit/tools folder doesn't exist.
Comments now appear as tooltips in the 'Tools' menu and the context menu.
Added optional comments to external tools.